--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
     build:
       context: ./db-init
       dockerfile: Dockerfile
+      args:
+        - http_proxy=http://191.191.29.66:3128
+        - https_proxy=http://191.191.29.66:3128
     restart: on-failure
     env_file:
       - global-variables.env
@@ -27,6 +30,9 @@ services:
     build:
       context: ./node-app
       dockerfile: Dockerfile
+      args:
+        - http_proxy=http://191.191.29.66:3128
+        - https_proxy=http://191.191.29.66:3128
     restart: on-failure
     ports:
       - "3000:3000"
