--- a/db-init/Dockerfile
+++ b/db-init/Dockerfile
@@ -1,15 +1,17 @@
-FROM alpine:3.8
+FROM debian:latest
 
 ENV DOCKERIZE_VERSION v0.6.1
 
-RUN apk add --update --no-cache openssl bash curl \
-&& rm -rf /var/cache/apk/* \
-&& wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-&& tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-&& rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+RUN apt-get update && apt-get install -y openssl wget curl \
+&& rm -rf /var/lib/apt/lists/* \
+&& wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+&& tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+&& rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
 COPY /work /work
 
 RUN chmod +x /work/*.sh 
 
 ENTRYPOINT exec dockerize -wait http://${COUCHDB_USER}:${COUCHDB_PASSWORD}@${COUCHDB_HOST}:${COUCHDB_PORT} -timeout 260s /work/entrypoint.sh
+
+
